testsuite/gsksl/errors/int-qualifier.frag
in int i;

void
main ()
{
}
